# adversity_topography

./: .gitignore  LICENSE  Makefile  README.md  config.local.example.sh  pyproject.toml  requirements.txt  run_all.sh
adtopo/: __init__.py  bayes_factors.py  config.py  fc_utils.py  logging_utils.py  re_models.py  stats_utils.py
code/: config.py
code/00_surface_area/: compute_network_areas.py  compute_network_areas.sbatch  network_surface_area_methods.txt
code/01_data_prep/: add_behavioral_outcomes.py  build_analysis_dataframes.py  build_covariates.py  build_ela_composites.py  fix_y2_age.py
code/02_expansion/: bivariate_associations.py  multivariate_models.py  sibling_discordance.py  splithalf_replication.py
code/03_encroachment/: compute_encroachment.py  encroachment_analysis.py  encroachment_cifti.py  gen_low_decile_dlabel.py  generate_scan_borders.py  gradient_positioning.py
code/04_connectivity/: compute_fc.py  compute_fc_baseline.py  encroach_fc_correspondence.py  fc_analysis.py  fc_compute_baseline.sbatch  fc_compute_followup.sbatch  fc_figures.py  fc_merge_followup.sbatch  seed_fc.py
code/05_behavior/: cognition_by_wave.py  cv_prediction.py  mediation.py  mediation.sbatch
code/figures/: analyze_seed_fc_structfunc.py  brain_surface_figures.py  compute_gradient_hotspot.py  compute_network_gradient.py  export_cifti_for_workbench.py  fig1.sbatch  fig1_panels.py  fig2_panels.py  fig3_panels.py  fig4_panels.py  figsrc.py  figstyle.py  gen_conjunction_map.py  gen_fc_groupmean_surfaces.py  gen_seed_fc_despeckle.py  modal_atlas.py  nature.mplstyle  (+2 more)
(+22 files in other folders)
